IntelliJの設定を修正する