@@ -1,6 +1,9 @@
 # custom IntelliJ IDEA VM options
 
 -Xms2048m
--Xmx2048m
--XX:ReservedCodeCacheSize=240m
+-Xmx8192m
+-XX:MaxPermSize=1024m
+-XX:ReservedCodeCacheSize=512m
 -XX:+UseCompressedOops
+
+-Dsun.java2d.uiScale.enabled=false
